# aleph2_robot

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  gitlab-ci-buildscript.sh  lazik_state_led.py  package.xml  shut_led.py
aleph2_bringup/: CMakeLists.txt  README.md  package.xml
aleph2_bringup/config/control/drivetrain/: controllers.yaml  joint_limits.yaml
aleph2_bringup/config/control/manip/: joint_limits.yaml  joints.yaml
aleph2_bringup/config/nanotec_bus/: bus.yml
aleph2_bringup/launch/: aleph2_bringup.launch  aleph2_bringup.launch.xml  drivetrain_control.launch  gimbal_control.launch  manip_control.launch  nanotec_bus_test.launch.xml  rosbags.launch
aleph2_bringup/scripts/: power_monitor  rosbag_recorder
aleph2_canopen/: CMakeLists.txt  package.xml
aleph2_canopen/config/nanotec/: C5-E-2-09.eds  bus.yml
aleph2_canopen/include/aleph2_canopen/: auto_setup.hpp  motor.hpp  nanotec_driver.hpp
aleph2_canopen/include/aleph2_canopen/node_interfaces/: node_canopen_nanotec_driver.hpp
aleph2_canopen/launch/: nanotec_setup.launch.xml
aleph2_canopen/src/: auto_setup.cpp  motor.cpp  nanotec_driver.cpp
aleph2_canopen/src/node_interfaces/: node_canopen_nanotec_driver.cpp
aleph2_hardware/: CMakeLists.txt  aleph2_hardware.xml  package.xml
aleph2_hardware/include/aleph2_hardware/: nanotec_system.hpp
aleph2_hardware/src/: nanotec_system.cpp
aleph2_hardware_interface/: CMakeLists.txt  README.md  dependencies.rosinstall  package.xml
aleph2_hardware_interface/include/aleph2_joint/: addon.h
aleph2_hardware_interface/nodes/: control_loop.cpp
aleph2_hardware_interface/src/aleph2_hardware_interface/: aleph2_hw.cpp
aleph2_hardware_interface/src/aleph2_joint/: nanotec_joint.cpp  rubi_encoder_addon.cpp  rubi_joint.cpp
cfg/: Nanotec.cfg
config/: common.yaml  hardware.yaml  (+3 more)
kacanopen/: CMakeLists.txt  CMakeSettings.txt  COPYING.txt  ConfigExtras.cmake  README.md  package.xml
kacanopen/drivers/: CMakeLists.txt  dummy.cpp
kacanopen/drivers_lgpl/: CMakeLists.txt
kacanopen/drivers_lgpl/lincan/: CMakeLists.txt
kacanopen/drivers_lgpl/peak_linux/: CMakeLists.txt
kacanopen/drivers_lgpl/serial/: CMakeLists.txt
kacanopen/drivers_lgpl/socket/: CMakeLists.txt
kacanopen/drivers_lgpl/virtual/: CMakeLists.txt
kacanopen/eds_library/: eds_files.json
kacanopen/eds_library/CiA_profiles/: 301.eds  402.eds
kacanopen/eds_library/Faulhaber/: 605.3150.51-V-EK-2-60.eds  605.3150.51-V-EK-3-60.eds  605.3150.55-D-EK-2-60.eds  605.3150.60-B-EK-2-60.eds  605.3150.65-B-EK-2-60.eds  605.3150.66-B-EK-2-60.eds  605.3150.67-A-EK-2-60.eds  605.3150.67-B-EK-2-60.eds  605.3150.68-A-EK-2-60.eds  605.3150.68-B-EK-2-60.eds  605.3150.69-A-EK-2-60.eds  605.3150.69-B-EK-2-60.eds  605.3150.70-A-EK-2-60.eds  605.3150.70-B-EK-2-60.eds  605.3150.71-A-EK-2-60.eds  605.3150.71-A-EK-3-60.eds  605.3150.73-A-EK-2-60.eds  EDS_Info.txt
kacanopen/eds_library/MaxonMotor/: epos2_347717.eds
kacanopen/eds_library/Nanotec/: C5-E-2-09.eds  CL3-E-2-0F.eds  CL3.eds
kacanopen/eds_library/Nanotec/FIR-v2039-B807052/: C5-E-2-09.eds  CL3-E-1-0F.eds  CL3-E-2-0F.eds
kacanopen/eds_library/SysTecElectronic/: Readme.txt
kacanopen/eds_library/SysTecElectronic/SO-1057/: 3301002_1.eds  MM217_V3Y_0.eds  MM217_V3Y_1.eds  MM217_V3Y_2.eds  MM217_V3Y_3.eds  MM217_V3Y_4.eds  MM217_V3Y_5.eds  MM217_V3Y_6.eds  MM217_Y_0.eds  MM217_Y_1.eds  MM217_Y_2.eds  MM217_Y_3.eds  MM217_Y_4.eds  MM217_Y_5.eds  MM217_Y_6.eds
kacanopen/eds_library/SysTecElectronic/SO-1090/: 3301001_0.eds  3301001_1.eds  3301001_2.eds  3301001_3.eds  3301001_4.eds  3301001_5.eds  3301001_6.eds
kacanopen/eds_library/SysTecElectronic/So-1064/CANopen_Io_X1_3001000/: IoX1_16DI_8DO.eds
kacanopen/eds_library/SysTecElectronic/So-1064/CANopen_Io_X2_3001001/: IoX2_24DI.eds
kacanopen/eds_library/SysTecElectronic/eds/: phyPS409Y.eds
kacanopen/include/kacanopen/core/: core.h  global_config.h  nmt.h  pdo.h  sdo.h  sdo_error.h
kacanopen/include/kacanopen/master/: address.h  device.h  dictionary_error.h  eds_library.h  eds_reader.h  entry.h  mapping.h  master.h  profiles.h  receive_pdo_mapping.h  transmit_pdo_mapping.h  types.h  utils.h  value.h
kacanopen/include/kacanopen/ros_bridge/: bridge.h  entry_publisher.h  entry_subscriber.h  joint_state_publisher.h  joint_state_subscriber.h
kacanopen/src/core/: core.cpp  global_config.cpp  message.cpp  nmt.cpp  pdo.cpp  sdo.cpp  sdo_error.cpp  sdo_response.cpp
kacanopen/src/examples/: CMakeLists.txt  core.cpp  listdevices.cpp  master.cpp  pdo.cpp
kacanopen/src/examples/ros/: motor_and_io_bridge.cpp  ros.cpp
kacanopen/src/examples/test/: eds_library.cpp  eds_reader.cpp
kacanopen/src/master/: device.cpp  dictionary_error.cpp  eds_library.cpp  eds_reader.cpp  entry.cpp  master.cpp  profiles.cpp  transmit_pdo_mapping.cpp  utils.cpp  value.cpp
kacanopen/src/ros_bridge/: bridge.cpp  entry_publisher.cpp  entry_subscriber.cpp  joint_state_publisher.cpp  joint_state_subscriber.cpp
nanotec_driver/: CMakeLists.txt  dependencies.rosinstall  package.xml  plugins.xml
nanotec_driver/config/nanotec/: bus.yml  ros2_control.yml
nanotec_driver/config/nanotec_c5/: bus.yml  ros2_control.yml
nanotec_driver/config/nanotec_cl3/: CL3-E-2-0F.eds  bus.yml
nanotec_driver/examples/: nanotec_autocalib.cpp  playground  playground.cpp
nanotec_driver/include/nanotec_driver/: auto_setup.hpp  command.hpp  lely_nanotec_bridge.hpp  mode.hpp  motor.hpp  nanotec.h  nanotec_driver.hpp  nanotec_system.hpp  profiled_position_mode.hpp  state.hpp  utils.h  word_accessor.hpp
nanotec_driver/include/nanotec_driver/node_interfaces/: node_canopen_nanotec_driver.hpp
nanotec_driver/launch/: nanotec_c5_setup.launch.xml  nanotec_cl3_setup.launch.xml  nanotec_setup.launch.xml  nanotec_system.launch.xml
nanotec_driver/src/: auto_setup.cpp  command.cpp  configure.cpp  lely_nanotec_bridge.cpp  motor.cpp  nanotec.cpp  nanotec_driver.cpp  nanotec_system.cpp  state.cpp
nanotec_driver/src/examples/: nanotec_autocalib.cpp
nanotec_driver/src/node_interfaces/: node_canopen_nanotec_driver.cpp
nanotec_driver/urdf/: nanotec_test.urdf
(+60 files in other folders)
