<?xml version="1.0"?>
<package format="2">
  <name>aleph2_bringup</name>
  <version>0.0.0</version>
  <description>The aleph2_bringup package</description>

  <maintainer email="blazej@todo.todo">blazej</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
