<?xml version="1.0"?>
<package format="2">
  <name>aleph2_bringup</name>
  <version>0.0.0</version>
  <description>The aleph2_bringup package</description>

  <maintainer email="blazej@todo.todo">blazej</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>aleph_viz</exec_depend>
  <exec_depend>aleph2_hardware_interface</exec_depend>
  <exec_depend>rubi_server</exec_depend>

</package>
