<?xml version="1.0"?>
<package format="3">
  <name>aleph2_bringup</name>
  <version>0.0.0</version>
  <description>The aleph2_bringup package</description>

  <maintainer email="blazej@todo.todo">blazej</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-psutil</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-psutil</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosparam</exec_depend>
  <exec_depend>rosbag</exec_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <exec_depend>aleph2_description</exec_depend>
  <exec_depend>aleph2_hardware_interface</exec_depend>
  <exec_depend>aleph2_msgs</exec_depend>
  <exec_depend>rubi_server</exec_depend>

</package>
