<?xml version="1.0"?>
<package format="3">
  <name>aleph2_bringup</name>
  <version>0.0.0</version>
  <description>
    The aleph2_bringup package
  </description>

  <maintainer email="continuum@cs.uni.wroc.pl">Continuum Rover Team</maintainer>
  <author>Błażej Sowa</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <exec_depend>aleph2_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
