<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aleph2_canopen</name>
  <version>0.0.0</version>
  <description>
    Aleph2 CANOpen configuration package
  </description>
  
  <maintainer email="continuum@cs.uni.wroc.pl">Continuum Rover Team</maintainer>
  <author>Błażej Sowa</author>
  
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros2_canopen</depend>
  <depend>lely_core_libraries</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
