<?xml version="1.0"?>
<package format="3">
	<name>kacanopen</name>
	<version>0.1.0</version>
	<description>
		KaCanOpen: An Open Plug&amp;Play CANopen Stack for ROS in Modern C++
	</description>
  
	<maintainer email="thomas.keh@student.kit.edu">Thomas Keh</maintainer>
	<author email="thomas.keh@student.kit.edu">Thomas Keh</author>

	<license>BSD</license>

	<url type="website">https://github.com/KITmedical/kacanopen</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
