<?xml version="1.0"?>
<package format="3">
  <name>nanotec_driver</name>
  <version>0.0.0</version>
  <description>
    The nanotec_driver package
  </description>

  <maintainer email="continuum@cs.uni.wroc.pl">Continuum Rover Team</maintainer>
  <author>Cezary Siwek</author>
  <author>Błażej Sowa</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>kacanopen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
