<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nanotec_driver</name>
  <version>0.0.0</version>
  <description>
    Driver for Nanotec motor controllers that uses ros2_canopen stack
  </description>
  
  <maintainer email="continuum@cs.uni.wroc.pl">Continuum Rover Team</maintainer>
  
  <license>MIT</license>

  <author>Błażej Sowa</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>canopen_402_driver</depend>
  <depend>canopen_core</depend>
  <depend>canopen_interfaces</depend>
  <depend>canopen_proxy_driver</depend>
  <depend>lely_core_libraries</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
