<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nanotec_driver</name>
  <version>0.0.0</version>
  <description>
    Driver for Nanotec motor controllers that uses ros2_canopen stack
  </description>
  
  <maintainer email="continuum@cs.uni.wroc.pl">Continuum Rover Team</maintainer>
  
  <license>MIT</license>

  <author>Błażej Sowa</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>boost</depend>
  <depend>ament_index_cpp</depend>
  <depend>canopen_core</depend>
  <depend>canopen_interfaces</depend>
  <depend>canopen_proxy_driver</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>lely_core_libraries</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
